--- a/www/templates/page.html
+++ b/www/templates/page.html
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div>
-      <img src="img/S03Hd5sQlSz7Vm01Jqke_4Tbo7gpjc.gif" width="100%" height="auto" style="display: block; margin-left: auto; margin-right: auto;">
+      <img src="img/S03Hd5sQlSz7Vm01Jqke_4Tbo7gpjc.gif" width="100%" height="auto" style="display: block; margin-left: auto; margin-right: auto;" ng-click="video()">
     </div>
   </ion-content>
 </ion-view>
